--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,15 @@
-
+server:
+  servlet:
+    context-path: /house
+  port: 8443
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/House
+    username: root
+    password: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
